--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -10,7 +10,7 @@
 
     <ion-slide class="slide_image">
       <img src="assets\imgs\slide1.png">
-      <h2>Slide 1 do meu App!</h2>
+      <h2>Slide 1 do meu App! ???</h2>
       <div>
         <p>Este é o meu App de testes. Estou aprendendo rápido!</p>
       </div>
